--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+<div>  
 <p> 
 <h1 id="german-feierherd">Germ&#225n G. Feierherd</h1>
 <h4 id="german-feierherd">PhD Candidate in Political Science, Yale University </br> 
@@ -40,7 +41,7 @@ I am a Research Associate at the <a href="http://www.cpd.edu/polticalscience" ti
 <p class="footer">
 Last updated: June 2015.<br /> 
 </p>
-
+</div> 
 
 </body>
 </html>
