--- a/research.html
+++ b/research.html
@@ -13,6 +13,7 @@
 
 <body>
 
+<div> 
 <p> 
 <h4> Work in Progress </h4>
 Bypassing the Gates to the Enemyâ€™s Backyard: Partisan Bias and Land-Titling in Authoritarian Peru (submitted) [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">paper</a>]
@@ -63,7 +64,7 @@ Gathering Beans: The Size of Legislative Coalitions in Argentina (1983-2008) (â€
 <p class="footer">
 Last updated: June 2015.<br /> 
 </p>
-
+</div> 
 
 </body>
 </html>
