--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="German G. Feierherd">
-  <title>German G. Feierherd</title>
+  <title>Feierherd - Research</title>
   <style type="text/css">code{white-space: pre;}</style>
   <link rel="stylesheet" href="style.css">
   <meta name="description" content="German Feierherd's webpage">
@@ -16,30 +16,30 @@
 <div> 
 <p> 
 <h4> Work in Progress </h4>
-Bypassing the Gates to the Enemy’s Backyard: Partisan Bias and Land-Titling in Authoritarian Peru (submitted) [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">paper</a>]
+Bypassing the Gates to the Enemy’s Backyard: Partisan Bias and Land-Titling in Authoritarian Peru (submitted) [<a href="abstracts.html#paper1" target="_blank">abstract</a>] [<a href="paper1.pdf">paper</a>]
 <br> 
 <br> 
-Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini) (submitted) [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">paper</a>]
+Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini) (submitted) [<a href="abstracts.html#paper2" target="_blank">abstract</a>] [<a href="paper2.pdf">paper</a>]
 <br> 
 <br> 
-One Foot In, One Foot Out: Informality, Enforcement, and the Partisan Left (writing/analysis in process) [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">paper</a>]
+One Foot In, One Foot Out: Informality, Enforcement, and the Partisan Left (writing/analysis in process) [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] 
 <br> 
 <br> 
-A Marathon is Not a Sprint: Business Politics and Tax Exemptions in Brazilian Municipalities (writing/analysis in process) [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] 
+A Marathon is Not a Sprint: Business Politics and Tax Exemptions in Brazilian Municipalities (writing/analysis in process) [<a href="abstracts.html#paper3" target="_blank">abstract</a>]
 <br> 
 <br> 
-With Friends Like These... Co-partisanship and Negative Electoral Coattails in Brazil (writing/analysis in process) [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] 
+How Mayors Hurt Their Presidential Ticket The Curse of Party Brands in Brazil (writing/analysis in process) [<a href="abstracts.html#paper5" target="_blank">abstract</a>] 
 <br> 
 <br> 
-Religion Versus Nationhood: Organizing Health Care in Argentina and the US (analysis in process) [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] 
+Religion Versus Nationhood: Organizing Health Care in Argentina and the US (analysis in process) [<a href="abstracts.html#paper4" target="_blank">abstract</a>]
 </p> 
 
 <p> 
 <h4>Peer-Reviewed Journal Articles</h4>
-Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007 (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in America Latina Hoy, 54, April 2010 [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">paper</a>]
+Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007 (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in America Latina Hoy, 54, April 2010 [<a href="http://www.yale.edu/polticalscience">paper</a>]
 <br> 
 <br> 
-Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso de adaptacion del PT a la hora de gobernar”) with V. Palermo, in Revista Argentina de Ciencia Politica, 9/10, 2006 [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] 
+Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso de adaptacion del PT a la hora de gobernar”) with V. Palermo, in Revista Argentina de Ciencia Politica, 9/10, 2006 
 <br> 
 </p> 
 
@@ -48,10 +48,13 @@ Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso 
 From the Hegemonic to the Scrambled Stalemate, CLACS Working Paper, Brown University, May 2014
 <br> 
 <br> 
-Gathering Beans: The Size of Legislative Coalitions in Argentina (1983-2008) (“Juntando Porotos: El Tamaño de las Coaliciones Legislativas en Argentina”), in A. Mustapic, A. Bonvecchi, and J. Zelaznik (comps.), Los Legisladores en el Congreso Argentino, Instituto Torcuato Di Tella, 2012 [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">abstract</a>] [<a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">paper</a>]
+Gathering Beans: The Size of Legislative Coalitions in Argentina (1983-2008) (“Juntando Porotos: El Tamaño de las Coaliciones Legislativas en Argentina”), in A. Mustapic, A. Bonvecchi, and J. Zelaznik (comps.), Los Legisladores en el Congreso Argentino, Instituto Torcuato Di Tella, 2012 [<a href="paper6.pdf">paper</a>]
 <br> 
 <br> 
 </p>
+
+
+
 
 <a href="index.html">Back to main</a>
 
