--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<div>  
+<div class="center">  
 <p> 
 <h1 id="german-feierherd">Germ&#225n G. Feierherd</h1>
 <h4 id="german-feierherd">PhD Candidate in Political Science, Yale University </br> 
