--- a/abstracts.html
+++ b/abstracts.html
@@ -12,7 +12,7 @@
 
 
 <body>
-<div> 
+<div class="center"> 
 <p id="paper1"> <h3> Bypassing the Gates to the Enemy’s Backyard: Partisan Bias and Land-Titling in Authoritarian Peru </h3> 
 
 Studies of distributive politics that focus only on central-regional or central-local dynamics can produce misleading findings in settings in which there are three levels of government: central, regional, and local. I use a double regression-discontinuity design in local and regional elections in a 2-by-2 factorial design to discern distributive strategies in a three-level competitive authoritarian regime, taking into account the partisanship of mayors as well as of regional office-holders. In a large land-titling program, Peru’s president disproportionally favored municipalities governed by mayors from his own party that were located in regions dominated by other parties. His apparent goal was to undermine the electoral standing of opposition regional governments and minimize the risk that they would interfere with policy implementation or claim credit for it. The strategy met with some success: I show that it yielded an increased vote share for the president’s party.
