--- a/research.html
+++ b/research.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<div> 
+<div class="center"> 
 <p> 
 <h4> Work in Progress </h4>
 Bypassing the Gates to the Enemy’s Backyard: Partisan Bias and Land-Titling in Authoritarian Peru (submitted) [<a href="abstracts.html#paper1" target="_blank">abstract</a>] [<a href="paper1.pdf">paper</a>]
