--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ Research Associate, Center on the Politics of Development, UC Berkeley</h4>
 
 
 <p>
-<img src="profile.jpg" alt="German" style="float:left;width:278px;height:258px; margin-right:15px; margin-bottom:15px">
-I am a PhD candidate in the Political Science Department at <a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">Yale University</a>. My main interest lies at the intersection of comparative politics and political economy, on phenomena that affect developing countries: state capacity, the informal economy, and income inequality. My dissertation studies informality in labor markets, with a focus in Argentina and Brazil.<br />
+<img src="profile.jpeg" alt="German" style="float:left;width:278px;height:258px; margin-right:15px; margin-bottom:15px">
+I am a PhD candidate in the Political Science Department at <a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">Yale University</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on economic informality, distributive politics, and political behavior. I am also interested in methods for causal inference in observational and experimental studies. My dissertation studies informality in labor markets, with a focus in Argentina and Brazil.<br />
+
 <br />
 I am a Research Associate at the <a href="http://www.cpd.edu/polticalscience" title="CPD">Center on the Politics of Development</a> at University of California, Berkeley and a Research Affiliate at the <a href="http://www.cpd.edu/polticalscience" title="CPD">Centro de Investigaciones Políticas</a>.
 
