--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Research Associate, Center on the Politics of Development, UC Berkeley</h4>
 I am a PhD candidate in the Political Science Department at <a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">Yale University</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on economic informality, distributive politics, and political behavior. I am also interested in methods for causal inference in observational and experimental studies. My dissertation studies informality in labor markets, with a focus in Argentina and Brazil.<br />
 
 <br />
-I am a Research Associate at the <a href="http://www.cpd.edu/polticalscience" title="CPD">Center on the Politics of Development</a> at University of California, Berkeley and a Research Affiliate at the <a href="http://www.cpd.edu/polticalscience" title="CPD">Centro de Investigaciones Políticas</a>.
+I am a Research Associate at the <a href="http://www.cpd.edu/polticalscience" title="CPD">Center on the Politics of Development</a> at University of California, Berkeley and a Research Affiliate at the <a href="http://www.cipol.org/investigadores.php" title="CIPOL">Centro de Investigaciones Políticas</a>.
 
 </p>
 
