Added new material

--- a/teaching.html
+++ b/teaching.html
@@ -35,7 +35,6 @@ At Universidad Torcuato Di Tella:
 My teaching interests include comparative politics, quantitative research methods (all levels), Latin American politics, political economy of development, and political parties and elections.
 <br> 
 <br> 
-
 In this <a href="https://github.com/feierherd/R-code-for-teaching">repository</a>, you will find useful statistical code in R. I developed (and also borrowed) most of this code while teaching statistics and quantitative methods at Yale: 
 
 <ul>
@@ -47,10 +46,17 @@ In this <a href="https://github.com/feierherd/R-code-for-teaching">repository</a
   <li>Using optim() Optimization in R</li>
   <li>Manski bounds</li>
   <li>Computing robust, clustered, and bootstrap standard errors</li>
-  <li>The Central Limit Theory in action</li> 
+  <li>The Central Limit Theorem in action</li> 
+  <li>Missing (and imputing) data using the Lalonde dataset</li> 
+  <li>Parametric vs. Non-parametric regression</li> 
   <li>An intro to RDD in R</li>
 </ul>
 
+Useful resources for R users: 
+<ul>
+<li><a href="https://google-styleguide.googlecode.com/svn/trunk/Rguide.xml" target="_blank">Google's style guide</a></li>
+<li><a href="http://tim-smith.us/arrgh/" target="_blank">aRrgh, by Tim Smith</a></li>
+</ul>
 
 
 <a href="index.html">Back to main</a>
@@ -60,6 +66,8 @@ In this <a href="https://github.com/feierherd/R-code-for-teaching">repository</a
 <hr class="footer"/>
 <a href="mailto: german.feierherd@yale.edu">Mail</a> | <a href="https://twitter.com/Feierherd/">Twitter</a> | <a href="https://twitter.com/Feierherd/">Github</a> | <a href="https://twitter.com/Feierherd/">Google Scholar</a>
 </p>
+
+
 
 <p class="footer">
 Last updated: June 2015.<br /> 
