--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@ Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Pre
 One Foot In, One Foot Out: Informality, Enforcement, and the Partisan Left (writing/analysis in process) [<a href="abstracts.html#paper5" target="_blank">abstract</a>] 
 <br> 
 <br> 
-How Mayors Hurt Their Presidential Ticket The Curse of Party Brands in Brazil (writing/analysis in process) [<a href="abstracts.html#paper4" target="_blank">abstract</a>]
+How Mayors Hurt Their Presidential Ticket: The Curse of Party Brands in Brazil (writing/analysis in process) [<a href="abstracts.html#paper4" target="_blank">abstract</a>]
 <br> 
 <br> 
 A Marathon is Not a Sprint: Business Politics and Tax Exemptions in Brazilian Municipalities (analysis in process) [<a href="abstracts.html#paper2" target="_blank">abstract</a>]   
