--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@ Research Associate, Center on the Politics of Development, UC Berkeley</h4>
 
 <p>
 <img src="profile.jpeg" alt="German" style="float:left;width:278px;height:258px; margin-right:15px; margin-bottom:15px">
-I am a PhD candidate in the Political Science Department at <a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">Yale University</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on economic informality, distributive politics, and political behavior. I am also interested in methods for causal inference in observational and experimental studies. My dissertation studies informality in labor markets, with a focus in Argentina and Brazil.<br />
+I am a PhD candidate in the Political Science Department at <a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">Yale University</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on economic informality, distributive politics, and political behavior. I am also interested in methods for causal inference in observational and experimental studies. <br />
+
+<br />
+In my dissertation, entitled “Left Behind: How Politics Shapes Labor-Markets in Latin America,”  I take up the challenge of explaining variation in labor law enforcement across developing countries, with a focus in Latin America. I show that left governments are not more likely to invest in stronger inspectorates, conduct more inspections, or increase the productivity of inspectors. On the contrary, they seem less likely to do either. My dissertation uses insights from insider-outsider economic theories on labor markets to explain why some governments promote &mdash; and others deter &mdash; the enforcement of regulations. <br />
 
 <br />
 I am a Research Associate at the <a href="http://www.cpd.edu/polticalscience" title="CPD">Center on the Politics of Development</a> at University of California, Berkeley and a Research Affiliate at the <a href="http://www.cipol.org/investigadores.php" title="CIPOL">Centro de Investigaciones Políticas</a>.
