--- a/research.html
+++ b/research.html
@@ -14,14 +14,19 @@
 <body>
 
 <div class="center"> 
+
+
+<p> 
+<h4>Under Review</h4>
+Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program [<a href="abstracts.html#paper1" target="_blank">abstract</a>] 
+<br> 
+<br> 
+Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini) [<a href="abstracts.html#paper2" target="_blank">abstract</a>] 
+</p> 
+
+
 <p> 
 <h4> Work in Progress </h4>
-Bypassing the Gates to the Enemy’s Backyard: Partisan Bias and Land-Titling in Authoritarian Peru (submitted) [<a href="abstracts.html#paper1" target="_blank">abstract</a>] 
-<br> 
-<br> 
-Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini) (submitted) [<a href="abstracts.html#paper2" target="_blank">abstract</a>] 
-<br> 
-<br> 
 One Foot In, One Foot Out: Informality, Enforcement, and the Partisan Left (writing/analysis in process) [<a href="abstracts.html#paper5" target="_blank">abstract</a>] 
 <br> 
 <br> 
