--- a/teaching.html
+++ b/teaching.html
@@ -41,11 +41,11 @@ In this <a href="https://github.com/feierherd/R-code-for-teaching">repository</a
   <li>A lenghty introduction to R (installing R, manipulating objects, functions, random variables, loading datasets, programming, apply/lapply/sapply/tapply, if-then-else statements, loops, writing functions, graphs, Monte Carlo simulations, installing/loading packages and running a linear regression)</li>
   <li>Sampling from finite populations and the Horvitz-Thompson estimator</li>
   <li>OLS with matrix algebra</li>
-  <li>An R example on the Simpson's paradox </li> 
+  <li>The Simpson's paradox </li> 
   <li>Partial regression and the FWL theorem</li> 
-  <li>Using optim() Optimization in R</li>
+  <li>optim() in R</li>
   <li>Manski bounds</li>
-  <li>Computing robust, clustered, and bootstrap standard errors</li>
+  <li>Robust, clustered, and bootstrap standard errors</li>
   <li>The Central Limit Theorem in action</li> 
   <li>Missing (and imputing) data using the Lalonde dataset</li> 
   <li>Parametric vs. Non-parametric regression</li> 
