--- a/research.html
+++ b/research.html
@@ -33,6 +33,9 @@ One Foot In, One Foot Out: Informality, Enforcement, and the Partisan Left (writ
 How Mayors Hurt Their Presidential Ticket: The Curse of Party Brands in Brazil (writing/analysis in process) [<a href="abstracts.html#paper4" target="_blank">abstract</a>]
 <br> 
 <br> 
+Left for Dead: The Electoral Cost of Work-Related Fatalities in Brazil (writing/analysis in process) [<a href="abstracts.html#paper6" target="_blank">abstract</a>]
+<br> 
+<br> 
 A Marathon is Not a Sprint: Business Politics and Tax Exemptions in Brazilian Municipalities (analysis in process) [<a href="abstracts.html#paper2" target="_blank">abstract</a>]   
 <br> 
 <br> 
