--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Research Associate, Center on the Politics of Development, UC Berkeley</h4>
 </p> 
 
 <ul class="pages">
-    <a href="index.html">Home</a> | <a href="cv-us.pdf">CV</a> | <a href="research.html">Research</a> | <a href="book.html">Book Project</a> | <a href="teaching.html">Teaching</a>
+    <a href="index.html">Home</a> | <a href="cv-us.pdf">CV</a> | <a href="research.html">Research</a> | <a href="diss.html">Dissertation</a> | <a href="teaching.html">Teaching</a>
 </ul>
 
 
