--- a/diss.html
+++ b/diss.html
@@ -13,13 +13,30 @@
 
 <body>
 
+
 <div class="center"> 
 
-<p> 
-<h2> Left Behind: How Politics Shapes Labor-Markets in Latin America </h2>
 
+<ul class="pages">
+    <a href="index.html">Home</a> | <a href="cv-us.pdf">CV</a> | <a href="research.html">Research</a> | <a href="diss.html">Book Project</a> | <a href="teaching.html">Teaching</a>
+</ul>
+
+
+ 
+
+<p> 
+<h2> Left Behind: The Politics of Labor-Markets in Latin America and Beyond </h2>
+My book-length dissertation project studies the relationship between government partisanship, globalization, and the regulation of labor markets; in particular, the relationship between partisanship and the enforcement of labor protections, with a focus in Latin America. All over the world, politicians, especially those on the left, have seen their agendas challenged by growing mobility of capital, labor competition from cheap suppliers, and the informalization of contract work. How does the left respond to these challenges? How can they attract the votes of an ever-larger group of poor workers, who are not represented by unions, without alienating mobile capital or their core organized labor constituency? Scholarly studies have addressed this problem by looking at the political dynamics of labor and social policy reform. Instead, I analyze how politicians use enforcement to shape labor markets, away from the limelight of formal policy-making. Conventional wisdom is that governments dominated by parties on the left will show less tolerance for labor violations. Instead I argue that governments of the left sometimes reduce enforcement to accommodate conflicting electoral demands made by different types of workers. 
 <p>
-Forthcoming. 
+
+<b>Chapter 1:</b> Labor Standards and Partisan Politics in the Developing World <br />
+<b>Chapter 2:</b> Globalization, Partisanship, and the Regulation of Labor Markets <br />
+<b>Chapter 3:</b> Partisanship and the Enforcement of Labor Standards in Latin America <br />
+<b>Chapter 4:</b> Left Partisanship and Labor Informality in Latin America <br />
+<b>Chapter 5:</b> Elite and Individual Preferences on Labor Standards <br />
+<b>Chapter 6:</b> Trade Liberalization and the Politics of Labor Standards in Brazil <br />
+<b>Chapter 7:</b> The Electoral Politics of Labor Standards in Brazil <br />
+<b>Chapter 8:</b> Conclusion <br />
 </p>
 
 <a href="index.html">Back to main</a>
