--- a/index.html
+++ b/index.html
@@ -16,24 +16,28 @@
 <div class="center">  
 <p> 
 <h1 id="german-feierherd">Germ&#225n G. Feierherd</h1>
-<h4 id="german-feierherd">PhD Candidate in Political Science, Yale University </br> 
-Research Associate, Center on the Politics of Development, UC Berkeley</h4>
+
+<h4 id="german-feierherd"> Postdoctoral Associate, Department of Political Science, Duke University </br>
+PhD Candidate in Political Science, Yale University </br> 
+Research Associate, Center on the Politics of Development, UC Berkeley </h4>
 </p> 
 
 <ul class="pages">
-    <a href="index.html">Home</a> | <a href="cv-us.pdf">CV</a> | <a href="research.html">Research</a> | <a href="diss.html">Dissertation</a> | <a href="teaching.html">Teaching</a>
+    <a href="index.html">Home</a> | <a href="cv-us.pdf">CV</a> | <a href="research.html">Research</a> | <a href="diss.html">Book Project</a> | <a href="teaching.html">Teaching</a>
 </ul>
 
 
 <p>
 <img src="profile.jpeg" alt="German" style="float:left;width:278px;height:258px; margin-right:15px; margin-bottom:15px">
-I am a PhD candidate in the Political Science Department at <a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">Yale University</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on economic informality, distributive politics, and political behavior. I am also interested in methods for causal inference in observational and experimental studies. <br />
+
+I am a PhD candidate in the Political Science Department at <a href="http://www.yale.edu/polticalscience" title="Yale Uiversity">Yale University</a>. From September 2016, I will be a postdoctoral associate in the Political Science Department at <a href="https://polisci.duke.edu/" title="Duke Uiversity">Duke University</a>. My main interest lies at the intersection of comparative politics and political economy, with a focus on labor and social policies (in the context of "weak" states), distributive politics, and political behavior. I am also interested in methods for causal inference in observational and experimental studies. <br />
 
 <br />
-In my dissertation, entitled “Left Behind: How Politics Shapes Labor-Markets in Latin America,”  I take up the challenge of explaining variation in labor law enforcement across developing countries, with a focus in Latin America. I show that left governments are not more likely to invest in stronger inspectorates, conduct more inspections, or increase the productivity of inspectors. On the contrary, they seem less likely to do either. My dissertation uses insights from insider-outsider economic theories on labor markets to explain why some governments promote &mdash; and others deter &mdash; the enforcement of regulations. <br />
+In my dissertation, entitled “Left Behind: How Politics Shapes Labor-Markets in Latin America,”  I take up the challenge of explaining variation in labor  enforcement and labor informality across developing countries, with a focus in Latin America. Using insights from insider-outsider economic theories on labor markets, I show that political parties with popular appeal, caught between insiders and outsiders, take a different approach to regulating labor markets. While other parties see informality as a tax avoidance problem or fertile ground for clientelism, the Left sees informality as a political compromise between the wishes of its organized labor base to retain current regulations (which maximize job security for their members) and the employability of outsiders. I also study the electoral effects of large workplace accidents, using insights from issue ownership and retrospective voting theories. 
+<br />
 
 <br />
-I am a Research Associate at the <a href="http://www.cpd.edu/polticalscience" title="CPD">Center on the Politics of Development</a> at University of California, Berkeley and a Research Affiliate at the <a href="http://www.cipol.org/investigadores.php" title="CIPOL">Centro de Investigaciones Políticas</a>.
+My publications and working papers are available <a href="research.html">here</a>. Feel free to contact me about ongoing research projects. 
 
 </p>
 
