--- a/research.html
+++ b/research.html
@@ -16,30 +16,42 @@
 <div class="center"> 
 
 
+<ul class="pages">
+    <a href="index.html">Home</a> | <a href="cv-us.pdf">CV</a> | <a href="research.html">Research</a> | <a href="diss.html">Book Project</a> | <a href="teaching.html">Teaching</a>
+</ul>
+
+
+
+
+
 <p> 
 <h4>Under Review</h4>
-Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program [<a href="abstracts.html#paper1" target="_blank">abstract</a>] 
+Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program [<a href="titling.pdf" target="_blank">paper</a>] 
 <br> 
 <br> 
-Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini) [<a href="abstracts.html#paper2" target="_blank">abstract</a>] 
+Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini). Revise and resubmit at the <i>British Journal of Political Science</i> [<a href="wealthy.pdf" target="_blank">paper</a>]
 </p> 
 
 
 <p> 
 <h4> Work in Progress </h4>
-One Foot In, One Foot Out: Informality, Enforcement, and the Partisan Left (writing/analysis in process) [<a href="abstracts.html#paper5" target="_blank">abstract</a>] 
+Why Do Leftist Governments Reduce Labor Enforcement and Increase Informality? Theory and Evidence From Latin America (writing/analysis in process) 
 <br> 
 <br> 
-How Mayors Hurt Their Presidential Ticket: The Curse of Party Brands in Brazil (writing/analysis in process) [<a href="abstracts.html#paper4" target="_blank">abstract</a>]
+How Mayors Hurt Their Presidential Ticket: The Curse of Party Brands in Brazil (writing/analysis in process) 
 <br> 
 <br> 
-Left for Dead: The Electoral Cost of Work-Related Fatalities in Brazil (writing/analysis in process) [<a href="abstracts.html#paper6" target="_blank">abstract</a>]
-<br> 
+Left for Dead: Issue Ownership and Expectation Setting in the Context of Large Workplace Fatal Accidents (writing/analysis in process) 
+<!-- <br> 
 <br> 
 A Marathon is Not a Sprint: Business Politics and Tax Exemptions in Brazilian Municipalities (analysis in process) [<a href="abstracts.html#paper2" target="_blank">abstract</a>]   
+ -->
 <br> 
 <br> 
-Religion Versus Nationhood: Organizing Health Care in Argentina and the US (analysis in process) [<a href="abstracts.html#paper4" target="_blank">abstract</a>]
+The Trade-offs of Trade Liberalization: Unemployment, Informality, and Enforcement 
+<!-- <br> 
+<br> 
+Religion Versus Nationhood: Organizing Health Care in Argentina and the US (analysis in process) [<a href="abstracts.html#paper4" target="_blank">abstract</a>] -->
 </p> 
 
 <p> 
