--- a/teaching.html
+++ b/teaching.html
@@ -13,28 +13,37 @@
 
 <body>
 
+
 <div class="center"> 
+
+
+<ul class="pages">
+    <a href="index.html">Home</a> | <a href="cv-us.pdf">CV</a> | <a href="research.html">Research</a> | <a href="diss.html">Book Project</a> | <a href="teaching.html">Teaching</a>
+</ul>
+
+
 
 <p> 
 <h2> Teaching </h2>
+At Yale, I served as a teaching fellow for substantive courses on comparative politics and the core courses on statistics and quantitative methods offered to PhD students in the Political Science department (with Professor Peter Aronow). In this capacity, I taught classes on probability theory, regression analysis, missing data, causal inference, and parametric models. I also ran weekly lab sessions and taught students to program in R. My teaching interests include comparative politics, quantitative research methods (all levels), Latin American politics, political economy of development, and political parties and elections.
+
+<p>
 At Yale, I served as a teaching fellow for the following courses: 
 
 <ul>
+  <li>Sex, Markets, and Power (Undergraduate Level), Spring 2016</li>
+  <li>Intro to Statistics in Political Science (Undergraduate Level), Fall 2012, Fall 2015</li>
   <li>Quantitative Methods (Graduate Level), Spring 2014</li>
   <li>Statistics (Graduate Level), Fall 2013</li>
   <li>Intro to Comparative Politics (Undergraduate Level), Spring 2013</li>
-  <li>Intro to Statistics in Political Science (Undergraduate Level), Fall 2012</li>
-</ul>
+  </ul>
 
 At Universidad Torcuato Di Tella: 
 
 <ul>
   <li>Political Institutions and Government (Undergraduate Level), 2006</li>
 </ul>
-
-My teaching interests include comparative politics, quantitative research methods (all levels), Latin American politics, political economy of development, and political parties and elections.
-<br> 
-<br> 
+ 
 In this <a href="https://github.com/feierherd/R-code-for-teaching">repository</a>, you will find useful statistical code in R. I developed (and also borrowed) most of this code while teaching statistics and quantitative methods at Yale: 
 
 <ul>
