--- a/research.html
+++ b/research.html
@@ -26,10 +26,10 @@
 
 <p> 
 <h4>Under Review</h4>
-Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program [<a href="titling.pdf" target="_blank">paper</a>] 
+Distributive Politics in Three-Level Systems: Evidence from a Large Land-Titling Program <!-- [<a href="titling.pdf" target="_blank">paper</a>]  -->
 <br> 
 <br> 
-Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini). Revise and resubmit at the <i>British Journal of Political Science</i> [<a href="wealthy.pdf" target="_blank">paper</a>]
+Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires (with Susan Stokes and Luis Schiumerini). Revise and resubmit at the <i>British Journal of Political Science</i> <!-- [<a href="wealthy.pdf" target="_blank">paper</a>] -->
 </p> 
 
 
