--- a/diss.html
+++ b/diss.html
@@ -33,14 +33,14 @@
 All over the world, politicians, especially those on the left, have seen their agendas challenged by growing mobility of capital, labor competition from cheap suppliers, and the informalization of contract work.  In this book I will show that the decision not to enforce labor-protecting regulations in a universal way is an active choice by governments that are worried about their future electoral prospects. While this argument may seem especially apt for governments of the right, whose constituencies are likely to tilt toward economic elites, parties of the left also have electoral reasons to move slowly on regulatory enforcement to protect workers. In the context of weakly progressive welfare states, small but politically powerful unions, and globalizing markets, governments from the left are cross-pressured by conflicting electoral demands: organized workers push for strict job security rules and other protective measures. But these measures increase the risk of unemployment for an ever-larger pool of workers in non-protected jobs. The book will investigate how left-leaning parties across the developing world garner political support from heterogeneous coalitions and how governments enforce labor protective measures and deliver benefits to informal-sector workers and enterprises. 
 <p>
 
-<b>Chapter 1:</b> Labor Standards and Partisan Politics in the Developing World <br />
+<!-- <b>Chapter 1:</b> Labor Standards and Partisan Politics in the Developing World <br />
 <b>Chapter 2:</b> Globalization, Partisanship, and the Regulation of Labor Markets <br />
 <b>Chapter 3:</b> Partisanship and the Enforcement of Labor Standards in Latin America <br />
 <b>Chapter 4:</b> Left Partisanship and Labor Informality in Latin America <br />
 <b>Chapter 5:</b> Elite and Individual Preferences on Labor Standards <br />
 <b>Chapter 6:</b> Trade Liberalization and the Politics of Labor Standards in Brazil <br />
 <b>Chapter 7:</b> The Electoral Politics of Labor Standards in Brazil <br />
-<b>Chapter 8:</b> Conclusion <br />
+<b>Chapter 8:</b> Conclusion <br /> -->
 </p>
 
 <a href="index.html">Back to main</a>
