--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p> 
 <h1 id="german-feierherd">Germ&#225n G. Feierherd</h1>
 
-<h4 id="german-feierherd"> Postdoctoral Associate, Department of Political Science, Duke University </br>
+<h4 id="german-feierherd"> Research Associate, Department of Political Science, Duke University </br>
 PhD Candidate in Political Science, Yale University </br> 
 Research Associate, Center on the Politics of Development, UC Berkeley </h4>
 </p> 
@@ -47,7 +47,7 @@ My publications and working papers are available <a href="research.html">here</a
 </p>
 
 <p class="footer">
-Last updated: September 2015.<br /> 
+Last updated: October 2016.<br /> 
 </p>
 </div> 
 
