--- a/diss.html
+++ b/diss.html
@@ -25,7 +25,7 @@
  
 
 <p> 
-<!-- <h2> The Left's Dilemma: How Politics of Labor-Markets in the Developing World </h2>
+<!-- <h2> The Left's Dilemma: How Politics of Labor Markets in the Developing World </h2>
 <br />
  -->My book-length project studies the relationship between government partisanship, globalization, and the regulation of labor markets; in particular, the relationship between partisanship and the enforcement of labor protections. Why are labor standards weak in parts of the developing world? Why do some governments promote and others deter the enforcement of employee protection requirements such as the right to a pension, the minimum wage, and safety conditions in the workplace? 
 <br />
