--- a/teaching.html
+++ b/teaching.html
@@ -18,7 +18,7 @@
 
 
 <ul class="pages">
-    <a href="index.html">Home</a> | <a href="cv-us.pdf">CV</a> | <a href="research.html">Research</a> | <a href="diss.html">Book Project</a> | <a href="teaching.html">Teaching</a>
+    <a href="index.html">Home</a> | <a href="Feierherd CV.pdf">CV</a> | <a href="research.html">Research</a>  | <a href="teaching.html">Teaching</a>
 </ul>
 
 
